# SmartFarmProject

project15/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  project15.glade  project15.glade.bak
project15/autom4te.cache/: output.1  requests  traces.0
project15/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur.c  capteur.h  interface.c  interface.c.bak  interface.h  project15  troupeaux.txt  trp.c
project16/: Makefile  Makefile.in  config.h  config.status  configure  humidite.txt  project16.glade
project16/autom4te.cache/: output.1  requests  traces.0  traces.1
project16/po/: Makefile  Makefile.in
project16/src/: Employe.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur.c  capteur.h  fichier.txt  fonct.c  fonct.h  interface.c  interface.c.bak  interface.h.bak  main.c  ouvrier.c  ouvrier.h  plante.c  plante.h  plante.txt  presence.txt  project16  rechercher.txt  troupeaux.txt
project16/src/.deps/: callbacks.Po  fonct.Po  ouvrier.Po  plante.Po  trp.Po
project2020/: Makefile  config.status  project15.glade  project15.gladep
project2020/autom4te.cache/: requests  traces.1
project2020/po/: Makefile  Makefile.in
project2020/src/: Makefile  callbacks.c  callbacks.h  interface.c  interface.h  main.c  project15  trp.h
project2020/src/.deps/: callbacks.Po
